--- a/bootcamp_esteban_domaniczky.html
+++ b/bootcamp_esteban_domaniczky.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootcamp 3ro y 4to </title>
+   
+    
+</head>
+<body>
     <h1>pruebas de commit</h1>
     <h3>pruebas de errores</h3>
     <h3>otra modificacion</h3>
     <h3>pruebas</h3>
-</head>
-<body>
-    
+    <h4>nuevo codigo</h4>
 </body>
 </html>
